--- a/gamedev/isometric/TODO
+++ b/gamedev/isometric/TODO
@@ -1,4 +1,6 @@
 - Fix DR_DrawTile() transforms for isometric tiling
+-- *almost* there
 - Load tilemap csv files
 - Render single-layer tilemap
 - Render multi-layer tilemaps
+- Camera control and movement
