paddlebaddle - use of rects and vectors for a little cleanup and readability

--- a/gamedev/paddlebaddle/TODO
+++ b/gamedev/paddlebaddle/TODO
@@ -1,6 +1,3 @@
-- Poll input
-- Spawn a ball
-- Move the ball
-- Collision detection & response
+- Handle tunneling & collision point logic
 - Basic AI
 - Point scoring & volleys
