paddlebaddle - a tiny bit more yak shaving, something useful is coming forreals

--- a/gamedev/paddlebaddle/TODO
+++ b/gamedev/paddlebaddle/TODO
@@ -1,3 +1,4 @@
 - Handle tunneling & collision point logic
+- Change ball direction based on paddle contact point
 - Basic AI
 - Point scoring & volleys
